last adjustment for tonight; fixed alignment of two-column list in footer

--- a/client/src/components/Footer/footer.css
+++ b/client/src/components/Footer/footer.css
@@ -39,6 +39,6 @@
   }
 
   .footer-link {
-    width: 40%;
+    width: 44%;
   }
 }
